--- a/index.html
+++ b/index.html
@@ -1,18 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- bootstrap link -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+        <link rel="stylesheet" href="assets/style.css">
+
+    <!-- JS link -->
+    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+
+
+
+    <header class="bg-warning">
+        <h1>Weather App</h1>
+    </header>
     <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <input class="input" id="search-text" type="text"></input>
+                <button class="btn button" id="search"> Search </button>
+                <div id="recent">
+                    <!-- dynamically created from array of recent searches -->
+                </div>
+            </div>
+        <div class="col-md-8">
+            <div id="current">
+                <h1 id="city-name"></h1>
+                <p>Temperature: <span id="temperature"></span> degrees</p>
+                <p>Humidity: <span id="humidity"></span> %</p>
+                <p>Wind Speed: <span id="wind-speed"></span></p>
+                <p>UV Index: <span id="uv"></span></p>
+            </div>
+            <div id="five-day" class="row">
+                <!-- use attr to dynamically make 5 day forcast all of these to have own column -->
+                <!-- create array that stores values -->
+            </div>
+        </div>
+        </div>
 
 
 
-
-
-        
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/script.js"></script>
 </body>
+
 </html>
