--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         
 
 
-            <div class="col-md-12 card" id="forecast-container">
+            <div class="col-md-10 card" id="forecast-container">
                 <h3> 5Day Forecast </h3>
 
                 <div class="row">
@@ -66,7 +66,7 @@
                         </h3>
                         <div class="card-body">
                             <p class="card-text">
-                                Icon
+                                <a><img class="card-img-top" id="icon1" src=""></a>
                             </p>
                         </div>
                         <div class="card-footer">
@@ -82,7 +82,7 @@
                         </h3>
                         <div class="card-body">
                             <p class="card-text">
-                                Icon
+                                <a><img class="card-img-top" id="icon2" src=""></a>
                             </p>
                         </div>
                         <div class="card-footer">
@@ -97,7 +97,7 @@
                         </h3>
                         <div class="card-body">
                             <p class="card-text">
-                                Icon
+                                <a><img class="card-img-top" id="icon3" src=""></a>
                             </p>
                         </div>
                         <div class="card-footer">
@@ -112,7 +112,7 @@
                         </h3>
                         <div class="card-body">
                             <p class="card-text">
-                                Icon
+                                <img class="card-img-top" id="icon4" src="">
                             </p>
                         </div>
                         <div class="card-footer">
@@ -126,7 +126,7 @@
                         </h3>
                         <div class="card-body">
                             <p class="card-text">
-                                Icon
+                                <img class="card-img-top" id="icon5" src="">
                             </p>
                         </div>
                         <div class="card-footer">
