no big changes completed, practicing with branches

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div> -->
         </form>
       </div>
-      <div class="collection">
+      <!-- <div class="collection">
         <a href="#!" class="collection-item">Dallas</a>
         <a href="#!" class="collection-item active">Denver</a>
         <a href="#!" class="collection-item">New York</a>
@@ -64,7 +64,7 @@
         <a href="#!" class="collection-item">New York</a>
         <a href="#!" class="collection-item">Los Angeles</a>
 
-      </div>
+      </div> -->
     </div>
   </div>
 
